--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -1,8 +1,8 @@
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
+
 <div class="mat-elevation-z8">
-  
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- ID Column -->
@@ -10,17 +10,29 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
+
+    <!-- Progress Column -->
     <ng-container matColumnDef="progress">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> progress </th>
-      <td mat-cell *matCellDef="let row"> {{row.progress}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+      <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
     </ng-container>
+
+    <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
+
+    <!-- Color Column -->
     <ng-container matColumnDef="color">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> color </th>
-      <td mat-cell *matCellDef="let row"> {{row.color}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
+      <td mat-cell *matCellDef="let row"> {{row.color}} </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th  *matHeaderCellDef mat-sort-header>Actions</th>
+      <mat-cell *matCellDef="let row" >
+           <button mat-button >Edit</button>
+      </mat-cell>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -28,10 +40,10 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 
 
-<!-- Copyright 2020 Google LLC. All Rights Reserved.
+<!-- Copyright 2018 Google Inc. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
     can be found in the LICENSE file at http://angular.io/license -->
