--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -1,7 +1,8 @@
-<mat-form-field>
+<mat-form-field style="margin-top: 25px;">
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
+<form [formGroup]="showClassGrp" (ngSubmit)="onSubmit()">
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
@@ -28,11 +29,20 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
       <td mat-cell *matCellDef="let row"> {{row.color}} </td>
     </ng-container>
+    
+    <ng-container matColumnDef="checked">
+      <th *matHeaderCellDef mat-sort-header>Check</th>
+      <td mat-cell *matCellDef="let element; let i=index">
+        <mat-checkbox (change)=updateCheckedList(element)>
+        </mat-checkbox>
+      </td>
+    </ng-container> 
+    
     <ng-container matColumnDef="actions">
-      <th  *matHeaderCellDef mat-sort-header>Actions</th>
-      <mat-cell *matCellDef="let row" >
-           <button mat-button >Edit</button>
-      </mat-cell>
+      <th *matHeaderCellDef mat-sort-header>Actions</th>      
+      <td *matCellDef="let row">
+          <button mat-raised-button color="warn">Edit</button>
+      </td>     
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -42,7 +52,7 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
-
+</form>
 
 <!-- Copyright 2018 Google Inc. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
