--- a/src/app/pages/acknowledge/acknowledge.component.css
+++ b/src/app/pages/acknowledge/acknowledge.component.css
@@ -1,12 +1,41 @@
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 table {
   width: 100%;
 }
 
 .mat-form-field {
   font-size: 14px;
-  width: 100%;
+  width: 50%;
 }
 
 td, th {
-  width: 25%;
+  width:10%;
 }
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+
+.basic-container {
+  padding: 30px;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+  margin-left:30px;
+}
+
+.example-margin {
+  margin: 0 10px;
+}
+
+  
+
