--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -26,23 +26,55 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
-
-    <!-- Progress Column -->
-    <ng-container matColumnDef="progress">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-      <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+    <ng-container matColumnDef="customerid">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CustomerId </th>
+      <td mat-cell *matCellDef="let row"> {{row.customerid}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    <ng-container matColumnDef="accountnumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> AccountNumber </th>
+      <td mat-cell *matCellDef="let row"> {{row.accountnumber}} </td>
     </ng-container>
 
-    <!-- Color Column -->
-    <ng-container matColumnDef="color">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
-      <td mat-cell *matCellDef="let row"> {{row.color}} </td>
+    <!-- customername Column -->
+    <ng-container matColumnDef="customername">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CustomerName </th>
+      <td mat-cell *matCellDef="let row"> {{row.customername}} </td>
+    </ng-container>
+
+     <!-- pan Column -->
+     <ng-container matColumnDef="pan">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> PAN </th>
+      <td mat-cell *matCellDef="let row"> {{row.pan}} </td>
+    </ng-container>
+
+    <!-- cardtype Column -->
+    <ng-container matColumnDef="cardtype">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CardType </th>
+      <td mat-cell *matCellDef="let row"> {{row.cardtype}} </td>
+    </ng-container>
+    
+    <!-- branchsol Column -->
+    <ng-container matColumnDef="branchsol">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> BranchSol </th>
+      <td mat-cell *matCellDef="let row"> {{row.branchsol}} </td>
+    </ng-container>
+
+    <!-- branchname Column -->
+    <ng-container matColumnDef="branchname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> BranchName </th>
+      <td mat-cell *matCellDef="let row"> {{row.branchname}} </td>
+    </ng-container>
+    <!-- datedispatched Column -->
+    <ng-container matColumnDef="datedispatched">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> DateDispatched </th>
+      <td mat-cell *matCellDef="let row"> {{row.datedispatched}} </td>
+    </ng-container>
+    <!-- status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+      <td mat-cell *matCellDef="let row"> {{row.status}} </td>
     </ng-container>
     
     <ng-container matColumnDef="checked">
@@ -52,10 +84,10 @@
         </mat-checkbox>
       </td>
     </ng-container> 
-    <ng-container matColumnDef="actions">
+    <ng-container matColumnDef="actions" >
       <th *matHeaderCellDef mat-sort-header>Actions</th>      
       <td *matCellDef="let row">
-          <button mat-raised-button color="warn">Edit</button>
+        <button mat-raised-button color="warn" class="shift-right">Edit</button>
       </td>     
     </ng-container>
 
