--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -14,9 +14,9 @@
 				[indeterminate]="selection.hasValue() && !isAllSelected()">
 			</mat-checkbox>
 		</th>
-		<td mat-cell *matCellDef="let element">
-			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="$event ? selection.toggle(element) : null"
-				[checked]="selection.isSelected(element)">
+		<td mat-cell *matCellDef="let row">
+			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="updateEach($event,row)"
+				[checked]="selection.isSelected(row)" #checkBox [checked]="row.status" >
 			</mat-checkbox>
 		</td> 
 	</ng-container> 
@@ -33,7 +33,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="accountnumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> AccountNumber </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> AccountNo </th>
       <td mat-cell *matCellDef="let row"> {{row.accountnumber}} </td>
     </ng-container>
 
@@ -77,19 +77,19 @@
       <td mat-cell *matCellDef="let row"> {{row.status}} </td>
     </ng-container>
     
-    <ng-container matColumnDef="checked">
+    <!-- <ng-container matColumnDef="checked">
       <th *matHeaderCellDef mat-sort-header>Check</th>
-      <td mat-cell *matCellDef="let element; let i=index">
-        <mat-checkbox (change)=updateCheckedList(element) class="example-margin">
+      <td mat-cell *matCellDef="let row of rows; let i=index">
+        <mat-checkbox #checkBox [checked]="row.status"  (change)=updateCheckedList(row) class="example-margin">{{row.id}}
         </mat-checkbox>
       </td>
-    </ng-container> 
-    <ng-container matColumnDef="actions" >
+    </ng-container>  -->
+    <!-- <ng-container matColumnDef="actions" >
       <th *matHeaderCellDef mat-sort-header>Actions</th>      
       <td *matCellDef="let row">
-        <button mat-raised-button color="warn" class="shift-right">Edit</button>
+        <button mat-raised-button color="warn" (click)="editAcknowledge()" class="shift-right">Edit</button>
       </td>     
-    </ng-container>
+    </ng-container> -->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
@@ -97,7 +97,7 @@
   </table>
 
   <section class="example-section">
-    <button mat-raised-button color="warn">Edit All</button>
+    <button mat-raised-button color="warn" (click)="updateAll()">Edit All</button>
   </section>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
