--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,29 @@
-<div class="signin-content">
-    <mat-card>
-      <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
-          <p>Please login to continue</p>
-          <mat-form-field class="full-width-input">
+<div class="main-wrapper" fxLayout="row" fxLayoutAlign="center center">
+
+    <mat-card class="box">
+      <mat-card-header>
+        <mat-card-title>Log In</mat-card-title>
+      </mat-card-header>
+  
+        <form [formGroup]="form" class="example-form" (ngSubmit)="onSubmit()">
+        <mat-card-content>
+          <mat-form-field class="example-full-width">
             <input matInput placeholder="Username" formControlName="userName" required>
             <mat-error *ngIf="isFieldInvalid('userName')">
-              Please inform your username
+                Invalid Username
             </mat-error>
           </mat-form-field>
-          <mat-form-field class="full-width-input">
-            <input matInput type="password" placeholder="Password" formControlName="password" required>
+  
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Password" formControlName="password" required>
             <mat-error *ngIf="isFieldInvalid('userName')">
-              Please inform your password
+                Invalid Password
             </mat-error>
           </mat-form-field>
-          <button mat-raised-button color="primary" type="submit">Login</button>
-        </form>
-      </mat-card-content>
+        </mat-card-content>
+        <!-- <button mat-stroked-button color="accent" class="btn-block">Sign-in</button> -->
+        <button mat-stroked-button color="accent" class="btn-block" type="submit">Login</button>
+      </form>
     </mat-card>
+  
   </div>
