--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -97,7 +97,7 @@
   </table>
 
   <section class="example-section">
-    <button mat-raised-button color="warn" (click)="updateAll()">Edit</button>
+    <button mat-raised-button color="primary" (click)="updateAll()">Update</button>
   </section>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
