--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,9 +2,14 @@
 
     <mat-card class="box">
       <mat-card-header>
-        <mat-card-title>Log In</mat-card-title>
-      </mat-card-header>
-  
+        <mat-card-title>
+        CEBG Tracker
+      </mat-card-title>     
+      
+      <mat-card-title>
+        <img src="assets/img/fcmb logo.png" style="width:70px" alt="">
+      </mat-card-title>
+      </mat-card-header>  
         <form [formGroup]="form" class="example-form" (ngSubmit)="onSubmit()">
         <mat-card-content>
           <mat-form-field class="example-full-width">
