--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,8 +2,8 @@
 <div class="sidebar-wrapper">
   <div class="logo">
     <a href="" class="simple-text logo-mini">
-      <div class="logo-image-small">
-        <img src="assets/img/angular2-logo.png">
+      <div class="logo-image-small">git 
+        <img src="assets/img/fcmb logo.png" alt="">
       </div>
     </a>
     <a href="" class="simple-text logo-normal">
