--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,12 @@
           </mat-form-field>
   
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" formControlName="password" required>
+            <input matInput id="mysecretpassword" placeholder="Password" type="password" formControlName="password" required matInput showHideInput>
+            <i matSuffix
+            class="material-icons"
+            showHideTrigger="mysecretpassword"
+            [showHideStatus]="{ materialIcon: true, id: 'mysecretpassword' }"
+          ></i>
             <mat-error *ngIf="isFieldInvalid('userName')">
                 Invalid Password
             </mat-error>
