--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <div class="sidebar-wrapper">
   <div class="logo">
     <a href="" class="simple-text logo-mini">
-      <div class="logo-image-small">git 
+      <div class="logo-image-small"> 
         <img src="assets/img/fcmb logo.png" alt="">
       </div>
     </a>
