--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -106,3 +106,8 @@ body {
 .main-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
 	padding: 0.8375em 0;
 }
+.image{
+	background-size:cover; width:auto;
+	background-image:url('/assets/img/BG.png');
+	background-position:100% 100%;
+  }
