--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -74,7 +74,7 @@
     <!-- status Column -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-      <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.acknowledgedStatus}} </td>
     </ng-container>
     
     <!-- <ng-container matColumnDef="checked">
