--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="main-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div class="main-wrapper" fxLayout="row" fxLayoutAlign="center center"  style="padding-top: 50px;">
 
     <mat-card class="box">
       <mat-card-header>
