--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,8 +33,11 @@
           </mat-form-field>
         </mat-card-content>
         <!-- <button mat-stroked-button color="accent" class="btn-block">Sign-in</button> -->
-        <button mat-stroked-button color="accent" class="btn-block" type="submit">Login</button>
+        <button mat-stroked-button color="accent" class="btn-block" (click)="onSubmit">Login</button> 
+        
       </form>
     </mat-card>
-  
   </div>
+  <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+    <p style="color:green">Processing the request. Kindly wait a few seconds. </p>  
+    </ngx-spinner> 
