Remove password autofill

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
           </mat-form-field>
   
           <mat-form-field class="example-full-width">
-            <input matInput id="mysecretpassword" placeholder="Password" type="password" formControlName="password" required matInput showHideInput>
+            <input matInput id="mysecretpassword" placeholder="Password" autocomplete="off" type="password" formControlName="password" required matInput showHideInput>
             <i matSuffix
             class="material-icons"
             showHideTrigger="mysecretpassword"
