--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -39,5 +39,5 @@
     </mat-card>
   </div>
   <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
-    <p style="color:green">The request is being processed, kindly wait a few seconds. </p>  
+    <p style="color:green;font-size: 16px;">The request is being processed, kindly wait a few seconds. </p>  
    </ngx-spinner> 
