--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -1,8 +1,8 @@
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
-
-<!-- <form [formGroup]="showClassGrp" (ngSubmit)="onSubmit()"> -->
+<br>
+<button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
