--- a/src/app/pages/activate/activate.component.html
+++ b/src/app/pages/activate/activate.component.html
@@ -1,1 +1,91 @@
-<p>activate works!</p>
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+<br>
+<button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>  
+      
+   <ng-container matColumnDef="select">
+	 <th mat-header-cell *matHeaderCellDef mat-sort-header>
+			<mat-checkbox (change)="$event ? masterToggle() : null" class="example-margin" [checked]="selection.hasValue() && isAllSelected()"
+				[indeterminate]="selection.hasValue() && !isAllSelected()">
+			</mat-checkbox>
+		</th>
+		<td mat-cell *matCellDef="let row">
+			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="updateEach($event,row)"
+				[checked]="selection.isSelected(row)" #checkBox [checked]="row.pickupstatus" >
+			</mat-checkbox>
+		</td> 
+	</ng-container> 
+
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="customerid">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CustomerId </th>
+      <td mat-cell *matCellDef="let row"> {{row.customerid}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="accountnumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> AccountNo </th>
+      <td mat-cell *matCellDef="let row"> {{row.accountnumber}} </td>
+    </ng-container>
+
+    <!-- customername Column -->
+    <ng-container matColumnDef="customername">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CustomerName </th>
+      <td mat-cell *matCellDef="let row"> {{row.customername}} </td>
+    </ng-container>
+
+     <!-- pan Column -->
+     <ng-container matColumnDef="pan">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> PAN </th>
+      <td mat-cell *matCellDef="let row"> {{row.pan}} </td>
+    </ng-container>
+
+    <!-- cardtype Column -->
+    <ng-container matColumnDef="cardtype">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> CardType </th>
+      <td mat-cell *matCellDef="let row"> {{row.cardtype}} </td>
+    </ng-container>
+    
+    <!-- branchsol Column -->
+    <ng-container matColumnDef="branchsol">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> BranchSol </th>
+      <td mat-cell *matCellDef="let row"> {{row.branchsol}} </td>
+    </ng-container>
+
+    <!-- branchname Column -->
+    <ng-container matColumnDef="branchname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> BranchName </th>
+      <td mat-cell *matCellDef="let row"> {{row.branchname}} </td>
+    </ng-container>
+    <!-- datedispatched Column -->
+    <ng-container matColumnDef="datedispatched">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> DateDispatched </th>
+      <td mat-cell *matCellDef="let row"> {{row.datedispatched}} </td>
+    </ng-container>
+    <!-- status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+      <td mat-cell *matCellDef="let row"> {{row.pickupstatus}} </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
+
+  <section class="example-section">
+    <button mat-raised-button color="primary" (click)="updateAll()">Update</button>&nbsp;&nbsp;&nbsp;
+    <button mat-raised-button color="primary" (click)="refresh()">Refresh</button>
+  </section>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
+
+<!-- <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+  <p style="color:green;font-size: 16px;">The request is being processed, kindly wait a few seconds. </p>  
+</ngx-spinner> -->
