--- a/src/app/pages/activate/activate.component.html
+++ b/src/app/pages/activate/activate.component.html
@@ -72,7 +72,7 @@
     <!-- status Column -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-      <td mat-cell *matCellDef="let row"> {{row.pickupstatus}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.activationStatus}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
@@ -86,6 +86,6 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 
-<!-- <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
   <p style="color:green;font-size: 16px;">The request is being processed, kindly wait a few seconds. </p>  
-</ngx-spinner> -->
+</ngx-spinner>
