--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -204,3 +204,8 @@
   outline: none;
   display: none;
 }
+/* .background-images{
+  background-image:url('~/src/assets/img/bank1BKG.png'); height: 100%;
+  margin: 0;
+  padding: 0;
+} */
