--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <mat-card class="box">
       <mat-card-header>
         <mat-card-title>
-        CEBG Tracker
+        Card Trackers
       </mat-card-title>     
       
       <mat-card-title>
