--- a/src/app/pages/activate/activate.component.html
+++ b/src/app/pages/activate/activate.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Activation Page">
 </mat-form-field>
 <br>
 <button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button>
@@ -14,14 +14,14 @@
 		</th>
 		<td mat-cell *matCellDef="let row">
 			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="updateEach($event,row)"
-				[checked]="selection.isSelected(row)" #checkBox [checked]="row.pickupstatus" >
+				[checked]="selection.isSelected(row)" #checkBox [checked]="row.activationStatus" >
 			</mat-checkbox>
 		</td> 
 	</ng-container> 
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
     <ng-container matColumnDef="customerid">
