--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,19 +4,19 @@
             <ul>
 
                 <li>
-                    <a href="https://www.creative-tim.com">
+                    <!-- <a href="https://www.creative-tim.com">
                         Creative Tim
-                    </a>
+                    </a> -->
                 </li>
                 <li>
-                    <a href="http://blog.creative-tim.com">
+                    <!-- <a href="http://blog.creative-tim.com">
                        Blog
-                    </a>
+                    </a> -->
                 </li>
                 <li>
-                    <a href="https://www.creative-tim.com/license">
+                    <!-- <a href="https://www.creative-tim.com/license">
                         Licenses
-                    </a>
+                    </a> -->
                 </li>
             </ul>
         </nav>
