--- a/src/app/pages/cardupload/cardupload.component.html
+++ b/src/app/pages/cardupload/cardupload.component.html
@@ -1,4 +1,6 @@
-<h3 style="margin-top: 10px;">Upload File</h3>
+<h4 style="margin-top: 10px;">Credit Card Upload</h4>
+
+<span *ngIf="spinnerEnabled" class="k-i-loading k-icon"></span>  
 
 <form [formGroup]="fileUploadForm" (ngSubmit)="onFormSubmit()">
     <div class="row">
@@ -15,11 +17,10 @@
            </div>           
         </div>
         <div class="text-center">
-            <button class="btn btn-primary" type="submit">Upload</button>
+            <button mat-raised-button color="primary" id="button" class="btn btn-primary" type="submit">Upload</button>
         </div>
     </div>
     <div>   
-    <span *ngIf="spinnerEnabled" class="k-i-loading k-icon"></span>
     <table>
         <th *ngFor="let key of keys">
         {{key}}
@@ -30,5 +31,9 @@
         </td>        
         </tr> 
     </table>
-    </div>
-</form>
+    </div>      
+</form>   
+
+<ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="default" type="ball-spin-clockwise">  
+    <p style="color:green;font-size: 16px;">The request is being processed, kindly wait a few seconds. </p>  
+  </ngx-spinner> 
