Bind underline to active nav bar

--- a/src/app/pages/cardupload/cardupload.component.html
+++ b/src/app/pages/cardupload/cardupload.component.html
@@ -1,4 +1,4 @@
-<h4 style="margin-top: 10px;">Credit Card Upload</h4>
+<h4 style="margin-top: 10px;text-align: center;">Credit Card Upload</h4>
 
 <span *ngIf="spinnerEnabled" class="k-i-loading k-icon"></span>  
 
