--- a/src/app/pages/pickup/pickup.component.html
+++ b/src/app/pages/pickup/pickup.component.html
@@ -1,3 +1,4 @@
+<h4 style="margin-top: 10px;text-align: center;">Pickup Page</h4>
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Pickup Page">
 </mat-form-field>
