--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -1,3 +1,4 @@
+<h4 style="margin-top: 10px;text-align: center;">Acknowledgement Page</h4>
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Acknowledgement Page">
 </mat-form-field>
