--- a/src/app/pages/activate/activate.component.html
+++ b/src/app/pages/activate/activate.component.html
@@ -1,3 +1,4 @@
+<h4 style="margin-top: 10px;text-align: center;">Activation Page</h4>
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Activation Page">
 </mat-form-field>
