--- a/src/app/pages/acknowledge/acknowledge.component.html
+++ b/src/app/pages/acknowledge/acknowledge.component.html
@@ -1,4 +1,6 @@
 <h4 style="margin-top: 10px;text-align: center;">Acknowledgement Page</h4>
+<div *ngIf="error" class="alert alert-danger">{{error}}</div>
+  <div *ngIf="success" class="alert alert-success">{{success}}</div>
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter Acknowledgement Page">
 </mat-form-field>
