--- a/src/app/pages/blankcard-acknowledgement/blankcard-acknowledgement.component.html
+++ b/src/app/pages/blankcard-acknowledgement/blankcard-acknowledgement.component.html
@@ -5,10 +5,7 @@
 <br>
 <button (click)="exportAsXLSX()" class="btn btn-secondary mb-2"> Export Excel</button>
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    	<!-- Checkbox Column -->
-    
+  <table mat-table [dataSource]="dataSource" matSort>    
    <ng-container matColumnDef="select">
 	 <th mat-header-cell *matHeaderCellDef mat-sort-header>
 			<mat-checkbox (change)="$event ? masterToggle() : null" class="example-margin" [checked]="selection.hasValue() && isAllSelected()"
@@ -17,7 +14,7 @@
 		</th>
 		<td mat-cell *matCellDef="let row">
 			<mat-checkbox (click)="$event.stopPropagation()" class="example-margin" (change)="updateEach($event,row)"
-				[checked]="selection.isSelected(row)" #checkBox [checked]="row.acknowledgedStatus" >
+				[checked]="selection.isSelected(row)" #checkBox [checked]="row.status" >
 			</mat-checkbox>
 		</td> 
 	</ng-container> 
@@ -27,70 +24,50 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Id</b></th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
-    <ng-container matColumnDef="customerid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>customerId</b> </th>
-      <td mat-cell *matCellDef="let row"> {{row.customerid}} </td>
+    <ng-container matColumnDef="cardtype">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Cardtype</b> </th>
+      <td mat-cell *matCellDef="let row"> {{row.carD_TYPE}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="accountnumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>AccountNo</b> </th>
-      <td mat-cell *matCellDef="let row"> {{row.accountnumber}} </td>
-    </ng-container>
-
-    <!-- customername Column -->
-    <ng-container matColumnDef="customername">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>CustomerName</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.customername}} </td>
-    </ng-container>
-
-     <!-- pan Column -->
-     <ng-container matColumnDef="pan">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b> PAN</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.pan}} </td>
-    </ng-container>
-
-    <!-- cardtype Column -->
-    <ng-container matColumnDef="cardtype">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>CardType</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.cardtype}} </td>
-    </ng-container>
-    
-    <!-- branchsol Column -->
-    <ng-container matColumnDef="branchsol">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>BranchSol</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.branchsol}} </td>
+    <ng-container matColumnDef="batchno">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>BatchNo</b> </th>
+      <td mat-cell *matCellDef="let row"> {{row.batcH_NO}} </td>
     </ng-container>
 
     <!-- branchname Column -->
     <ng-container matColumnDef="branchname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>BranchName</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.branchname}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.brancH_NAME}} </td>
+    </ng-container>
+
+      <!-- cardtype Column -->
+    <ng-container matColumnDef="datedispatch">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>DateDispatch</b></th>
+      <td mat-cell *matCellDef="let row"> {{row.datE_OF_DISPATCH}} </td>
     </ng-container>
     <!-- datedispatched Column -->
     <ng-container matColumnDef="datedispatched">
       <th mat-header-cell *matHeaderCellDef mat-sort-header><b>DateDispatched</b></th>
       <td mat-cell *matCellDef="let row"> {{row.datedispatched}} </td>
     </ng-container>
+    <ng-container matColumnDef="entrydate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>EntryDate</b></th>
+      <td mat-cell *matCellDef="let row"> {{row.entrY_DATE}} </td>
+    </ng-container>
+    <ng-container matColumnDef="noofcards">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>NoOfCards</b></th>
+      <td mat-cell *matCellDef="let row"> {{row.nO_OF_CARDS}} </td>
+    </ng-container>
+    <ng-container matColumnDef="solid">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>SolId</b></th>
+      <td mat-cell *matCellDef="let row"> {{row.soL_ID}} </td>
+    </ng-container>soL_ID
     <!-- status Column -->
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header><b> Status</b></th>
-      <td mat-cell *matCellDef="let row"> {{row.acknowledgedStatus}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header><b>Status</b></th>
+      <td mat-cell *matCellDef="let row"> {{row.status}} </td>
     </ng-container>
-    
-    <!-- <ng-container matColumnDef="checked">
-      <th *matHeaderCellDef mat-sort-header>Check</th>
-      <td mat-cell *matCellDef="let row of rows; let i=index">
-        <mat-checkbox #checkBox [checked]="row.status"  (change)=updateCheckedList(row) class="example-margin">{{row.id}}
-        </mat-checkbox>
-      </td>
-    </ng-container>  -->
-    <!-- <ng-container matColumnDef="actions" >
-      <th *matHeaderCellDef mat-sort-header>Actions</th>      
-      <td *matCellDef="let row">
-        <button mat-raised-button color="warn" (click)="editAcknowledge()" class="shift-right">Edit</button>
-      </td>     
-    </ng-container> -->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;">
