--- a/src/app/pages/cardupload/cardupload.component.html
+++ b/src/app/pages/cardupload/cardupload.component.html
@@ -1,5 +1,7 @@
 <h4 style="margin-top: 10px;text-align: center;">Credit Card Upload</h4>
-
+<div *ngIf="error" class="alert alert-danger">{{error}}</div>
+  <div *ngIf="success" class="alert alert-success">{{success}}</div>
+  
 <span *ngIf="spinnerEnabled" class="k-i-loading k-icon"></span>  
 
 <form [formGroup]="fileUploadForm" (ngSubmit)="onFormSubmit()">
