Email URL Redirection to portal

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
           <div class="col-7 col-md-8">
             <div class="numbers">
               <p class="card-category">Revenue</p>
-              <p class="card-title">$ 1,345
+              <p class="card-title">N 1,345
                 <p>
             </div>
           </div>
