--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -21,9 +21,8 @@
     
     <div class="collapse navbar-collapse justify-content-end" id="collapseExample" [ngbCollapse]="isCollapsed">
       
-      <form>        
-
-      </form>
+      <form>
+     </form>
       <ul class="navbar-nav">
         <!-- <li class="nav-item">
           <a class="nav-link btn-magnify" href="javascript:void(0)">
@@ -41,12 +40,12 @@
               <span class="d-lg-none d-md-block">Actions</span>
             </p>
           </a>
-          Logout
+          
           <div ngbDropdownMenu aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu dropdown-menu-right">
             <!-- <div class="input-group no-border">
               <button mat-raised-button color="warn"  (click)="confirmDialog()">Logout</button>        
             </div> -->
-            <a class="dropdown-item" color="warn" (click)="confirmDialog()">Logout</a>
+            <!-- <a class="dropdown-item" color="warn" (click)="confirmDialog()">Logout</a> -->
             <!-- <a ngbDropdownItem href="javascript:void(0)">Action</a>
             <a ngbDropdownItem href="javascript:void(0)">Another action</a>
             <a ngbDropdownItem href="javascript:void(0)">Something else here</a> -->
@@ -54,7 +53,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link btn-rotate" href="javascript:void(0)">
-            <i class="nc-icon nc-settings-gear-65"></i>
+            <button type="button" class="btn btn-default btn-sm" (click)="confirmDialog()">
+              <span class="glyphicon glyphicon-log-out"></span> Log out
+            </button>
             <p>
               <span class="d-lg-none d-md-block">Account</span>
             </p>
