Html OTP Aesthetics

--- a/src/app/otpinput/otp.input.component.scss
+++ b/src/app/otpinput/otp.input.component.scss
@@ -17,7 +17,7 @@
 .otp-container {
     .otp-input:not(:last-child) {
         margin-right: 8px;
-        margin-top: 200px;
+        //margin-top: 200px;
     }
 }
 
