--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -1,4 +1,7 @@
-OTP
+
+<h3 style="text-align:center;margin-top: 200px;width: 100%;
+display: block;
+font-weight: 600;">Enter Verification Token</h3>
 <otp
   [setting]="settings"
   (onValueChange)="onInputChange($event)" style="text-align:center;"
