--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -1,9 +1,10 @@
 
-<div style="text-align:center;margin-top: 200px;">   
-<img src="assets/img/fcmb logo.png" style="width:70px;margin-bottom: 20px;" alt=""> 
-<h3 style="font-weight: 600;margin-top: -1rem;">Enter OTP Token</h3>
-</div>
+<div style="text-align:center;margin-top: 150px;">   
+<img src="assets/img/fcmb logo.png" style="width:70px;margin-bottom: 10px;" alt=""> 
+<h5 style="font-weight: 600;font-size: 30px;">Enter OTP Token</h5>
+
 <otp
   [setting]="settings"
   (onValueChange)="onInputChange($event)" style="text-align:center;"
 ></otp>
+</div>
