Login FCMB logo Removal

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
     <mat-card class="box">
       <mat-card-header>
         <mat-card-title>
-        Card Trackers
+        Gitinsight
       </mat-card-title>     
       
       <mat-card-title>
-        <img src="assets/img/fcmb logo.png" style="width:70px" alt="">
+        <img src="assets/img/jakesAjao.jpeg" style="width:70px" alt="">
       </mat-card-title>
       </mat-card-header>  
         <form [formGroup]="form" class="example-form" (ngSubmit)="onSubmit()">
